--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "postinstall": "ng build --aot -configuration production"
+    "postinstall": "ng build"
   },
   "engines": {
     "node": "v18.12.1",
