--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "angular-in-memory-web-api": "^0.14.0",
     "express": "^4.18.2",
     "path": "^0.12.7",
     "rxjs": "~7.5.0",
